# ConstrainedMiniball

./: .clang-format  .clangd  .gitignore  .gitmodules  .neocmake.toml  CMakeLists.txt  CMakePresets.json  ConstrainedMiniball.h  README.md  Readme.md  cmb.hpp  constrained_miniball.h  example.cpp  test.cpp  vcpkg-configuration.json  vcpkg.json
tests/: convert_double.cpp  degenerate_case.cpp  degenerate_case2.cpp  gmpzf_input.cpp  paper_example_1.cpp  paper_example_2.cpp  test_utils.hpp  triangle_2d.cpp  triangle_3d.cpp
